finish edit dark theme in fragment diet type

--- a/app/src/main/res/layout/fragment_b_m_i.xml
+++ b/app/src/main/res/layout/fragment_b_m_i.xml
@@ -255,7 +255,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/large_margin"
-        android:backgroundTint="@color/yello_light"
+        style="@style/bgInBMi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/heightTIL">
