--- a/app/src/main/res/layout/fragment_diet_type.xml
+++ b/app/src/main/res/layout/fragment_diet_type.xml
@@ -23,7 +23,7 @@
             android:id="@+id/infoCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/yello_heavy"
+            style="@style/bgdiet"
             app:cardCornerRadius="@dimen/corner_radius_12dp"
             app:cardElevation="0dp"
             android:layout_margin="@dimen/default_margin"
@@ -48,8 +48,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Standard Diet"
-                    style="@style/titleText"
-                    android:textColor="@color/black"
+                    style="@style/titleTextInDiet"
                     app:layout_constraintTop_toBottomOf="@id/dietIcon"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
@@ -58,7 +57,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/standardDiet"
-                    style="@style/bodyText"
+                    style="@style/bodyTextInDiet"
                     android:layout_marginTop="@dimen/small_margin"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
