--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,7 +13,52 @@
         <item name="android:statusBarColor">@color/white</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
     </style>
+    <!--Here I Started-->
+    <style name="cardViewInHome" parent="Widget.MaterialComponents.CardView">
+        <item name="cardBackgroundColor">#40FFD858</item>
+        <item name="cardCornerRadius">@dimen/corner_radius_12dp</item>
+        <item name="cardElevation">0dp</item>
+        <item name="contentPadding">@dimen/default_padding</item>
+    </style>
 
+    <style name="progress">
+        <item name="indicatorColor">#FFCB21</item>
+        <item name="trackColor">@color/white</item>
+    </style>
+
+    <style name="cardView" parent="Widget.Material3.CardView.Outlined">
+        <item name="cardBackgroundColor">#40FFD858</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="backgroundColor">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="cardElevation">0dp</item>
+        <item name="strokeColor">@color/light_gray</item>
+    </style>
+
+    <style name="bgInBMi">
+        <item name="backgroundColor">#40FFD858</item>
+    </style>
+
+    <!--Diet Fragment-->
+
+    <style name="bgdiet" parent="Widget.MaterialComponents.CardView">
+        <item name="cardBackgroundColor">#40FFD858</item>
+        <item name="cardElevation">0dp</item>
+    </style>
+
+    <style name="titleTextInDiet">
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textSize">@dimen/medium_text_size_18sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="bodyTextInDiet">
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textSize">@dimen/large_body_size</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="alpha">.4</item>
+    </style>
+    <!--The End-->
     <style name="chip" parent="Widget.Material3.Chip.Filter">
         <item name="chipStrokeColor">@color/light_gray</item>
         <item name="chipSurfaceColor">@color/yello_light</item>
@@ -40,7 +85,7 @@
         <item name="android:textSize">@dimen/large_body_size</item>
         <item name="android:textColor">@color/white</item>
         <item name="alpha">.4</item>
-        <item name="android:drawableTint">@color/white</item>
+        <item name="android:drawableTint" tools:targetApi="m">@color/white</item>
     </style>
 
     <style name="subBodyText">
@@ -57,17 +102,17 @@
         <item name="alpha">.4</item>
     </style>
 
-    <style name="cardView" parent="Widget.Material3.CardView.Outlined">
-        <item name="cardBackgroundColor">@android:color/white</item>
-        <item name="backgroundTint">@color/white</item>
-        <item name="backgroundColor">@color/white</item>
-        <item name="cardElevation">0dp</item>
-        <item name="strokeColor">@color/light_gray</item>
-    </style>
+<!--    <style name="cardView" parent="Widget.Material3.CardView.Outlined">-->
+<!--        <item name="cardBackgroundColor">@android:color/white</item>-->
+<!--        <item name="backgroundTint">@color/white</item>-->
+<!--        <item name="backgroundColor">@color/white</item>-->
+<!--        <item name="cardElevation">0dp</item>-->
+<!--        <item name="strokeColor">@color/light_gray</item>-->
+<!--    </style>-->
 
-    <style name="cardViewWithBackground" parent="cardView">
-        <item name="cardBackgroundColor">@color/yello_light</item>
-    </style>
+<!--    <style name="cardViewWithBackground" parent="cardView">-->
+<!--        <item name="cardBackgroundColor">@color/yello_light</item>-->
+<!--    </style>-->
 
     <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title"/>
 
