finish edit dark theme in fragment home

--- a/app/src/main/res/layout/healthy_food.xml
+++ b/app/src/main/res/layout/healthy_food.xml
@@ -37,7 +37,7 @@
 
             <TextView
                 android:id="@+id/text_healthyFood"
-                style="@style/subTitle"
+                style="@style/subTitleInHome"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
