--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -26,15 +26,33 @@
         <item name="trackColor">@color/white</item>
     </style>
 
-    <style name="cardView" parent="Widget.Material3.CardView.Outlined">
+    <style name="progreeInHome">
+        <item name="android:progressDrawable">@drawable/circular_progress_bar_dark</item>
+    </style>
+
+    <style name="cardViewMeal" parent="Widget.MaterialComponents.CardView">
         <item name="cardBackgroundColor">#40FFD858</item>
         <item name="backgroundTint">@color/white</item>
         <item name="backgroundColor">@color/white</item>
-        <item name="android:textColor">@color/white</item>
         <item name="cardElevation">0dp</item>
         <item name="strokeColor">@color/light_gray</item>
     </style>
 
+    <style name="subBodyTextInHome">
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textSize">@dimen/medium_body_size</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="alpha">.4</item>
+    </style>
+
+    <style name="subTitleInHome">
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textSize">@dimen/large_body_size</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="alpha">.4</item>
+        <item name="android:drawableTint" tools:targetApi="m">@color/white</item>
+    </style>
+    <!--BMI Fragment-->
     <style name="bgInBMi">
         <item name="backgroundColor">#40FFD858</item>
     </style>
@@ -57,6 +75,10 @@
         <item name="android:textSize">@dimen/large_body_size</item>
         <item name="android:textColor">@color/white</item>
         <item name="alpha">.4</item>
+    </style>
+
+    <style name="iconDiet">
+        <item name="android:drawable">@drawable/diet</item>
     </style>
     <!--The End-->
     <style name="chip" parent="Widget.Material3.Chip.Filter">
