--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,17 +29,40 @@
         <item name="contentPadding">@dimen/default_padding</item>
     </style>
 
+    <style name="cardViewMeal" parent="Widget.MaterialComponents.CardView">
+        <item name="cardBackgroundColor">@color/yello_light</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="backgroundColor">@color/white</item>
+        <item name="cardElevation">0dp</item>
+        <item name="strokeColor">@color/light_gray</item>
+    </style>
+
+    <style name="subBodyTextInHome">
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textSize">@dimen/medium_body_size</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="alpha">.4</item>
+    </style>
+
+    <style name="subTitleInHome">
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textSize">@dimen/large_body_size</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="alpha">.4</item>
+        <item name="android:drawableTint" tools:targetApi="m">@color/black</item>
+    </style>
+
     <style name="progress">
         <item name="indicatorColor">@color/progress_color</item>
         <item name="trackColor">@color/chip_teal</item>
     </style>
 
     <style name="progreeInHome">
-        <item name="android:solidColor">@color/progress_color</item>
+        <item name="android:progressDrawable">@drawable/circular_progress_bar</item>
     </style>
-
+    <!--Bmi Fragment-->
     <style name="bgInBMi">
-        <item name="backgroundTint">@color/yello_light</item>
+        <item name="backgroundTint">#DAE4E5</item>
     </style>
     <!--Diet Fragment-->
     <style name="bgdiet" parent="Widget.MaterialComponents.CardView">
@@ -58,6 +81,10 @@
         <item name="android:textSize">@dimen/large_body_size</item>
         <item name="android:textColor">@color/black</item>
         <item name="alpha">.4</item>
+    </style>
+
+    <style name="iconDiet">
+        <item name="android:drawable">@drawable/ic_diet_symbol</item>
     </style>
 
     <!--The End-->
