--- a/app/src/main/res/layout/fragment_item_details.xml
+++ b/app/src/main/res/layout/fragment_item_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    style="@style/fragment_bg"
     android:clickable="true"
     android:focusable="true"
     tools:context=".ui.ItemDetailsFragment">
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/default_margin"
-        android:background="@drawable/rounded_corners"
+        style="@style/bgItemDetails"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_item_details">
@@ -35,7 +35,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:text="Carbs"
-            android:textColor="@color/black"
+            style="@style/darkColorInBmi"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:alpha=".7"
             android:text="50g"
-            android:textColor="@color/black"
+            style="@style/darkColorInBmi"
             android:textSize="12sp"
             android:textStyle="normal"
             app:layout_constraintStart_toStartOf="@+id/progressBarOfCarb"
@@ -71,8 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:text="Proteins"
-            android:textColor="@color/black"
-            android:textSize="12sp"
+            style="@style/darkColorInBmi"          android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/carbAmount"
             app:layout_constraintTop_toBottomOf="@+id/carbAmount" />
@@ -95,7 +94,7 @@
             android:layout_height="wrap_content"
             android:alpha=".7"
             android:text="40g"
-            android:textColor="@color/black"
+            style="@style/darkColorInBmi"
             android:textSize="12sp"
             android:textStyle="normal"
             app:layout_constraintStart_toStartOf="@+id/progressBarOfProtein"
@@ -107,7 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:text="Fats"
-            android:textColor="@color/black"
+            style="@style/darkColorInBmi"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/proteinAmount"
@@ -131,7 +130,7 @@
             android:layout_height="wrap_content"
             android:alpha=".7"
             android:text="14g"
-            android:textColor="@color/black"
+            style="@style/darkColorInBmi"
             android:textSize="12sp"
             android:textStyle="normal"
             app:layout_constraintStart_toStartOf="@+id/fatProgressBarOfFats"
@@ -154,7 +153,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:text="160"
-            android:textColor="@color/black"
+            style="@style/darkColorInBmi"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
@@ -166,7 +165,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Kcal"
-            android:textColor="@color/black"
+            style="@style/darkColorInBmi"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/KcalAmount"
@@ -180,7 +179,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/default_margin"
-        android:background="@drawable/rounded_corners2"
+        style="@style/servingStyle"
         android:padding="@dimen/default_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -229,7 +228,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Servings"
-            android:textColor="@color/black"
+            style="@style/subTitleInHome"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/constraintLayout"
